fixed results table bug, was showing inside and overlapping map

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,22 +46,11 @@ h1 a {
 }
 
 #listing {
-    position: absolute;
     width: 200px;
-    height: 470px;
+    height: 400px;
     overflow: auto;
-    left: 442px;
-    top: 0px;
     cursor: pointer;
     overflow-x: hidden;
-}
-
-#findhotels {
-    text-align: right;
-    width: 100px;
-    font-size: 14px;
-    padding: 4px;
-    background-color: #fff;
 }
 
 #locationField {
@@ -79,7 +68,7 @@ h1 a {
 
 #resultsTable {
     border-collapse: collapse;
-    width: 240px;
+    width: 400px;
 }
 
 #rating {
